Fix bug 164691

The handling of the dbus reply to check for the screensaver was
reversed, so we would always be shown as active if the screensaver
was running.

Patch from makosoft@googlemail.com - Thanks!
Fix should be in Kopete 0.60, which will be released with KDE 4.1
BUG:164691

svn path=/trunk/KDE/kdenetwork/kopete/; revision=828501